[package]
name = "serenity_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures = {version = "0.3.28" }
serde = {version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4.17"
once_cell = "1.17.1"
fastrand = "1.9.0"
parking_lot = "0.12.1"
